--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -29,7 +29,7 @@
       <p class="para">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       <span class="author">
         <img src="./assets/images/image-avatar.webp" alt="author of the blog HTML and CSS foundations">
-        <h5>Greg Hooper</h5>
+        <p>Greg Hooper</p>
       </span>
     </div>
   </div>
