--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -25,7 +25,7 @@
     <div class="content">
       <div class="tag">Learning</div>
       <p>Published 21 Dec 2023</p>
-      <h2>HTML & CSS foundations</h2>
+      <a href="#">HTML & CSS foundations</a>
       <p class="para">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       <span class="author">
         <img src="./assets/images/image-avatar.webp" alt="author of the blog HTML and CSS foundations">
